[tool.poetry]
name = "myblock1"
version = "0.1.0"
description = ""
authors = ["jackjk521 <jedchu541@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
